# cloudformatious-cli

./: .clippy.toml  Cargo.toml  README.md
.github/workflows/: cache-osxcross.yaml  cargo-publish.yml  pr.yaml  release.yaml  release.yml
src/: change_set.rs  client.rs  command.rs  error.rs  events.rs  fmt.rs  lib.rs  main.rs  package.rs  s3.rs  stack_status.rs  template.rs
src/command/: apply_stack.rs  completions.rs  delete_stack.rs  package.rs
test/fixtures/: failing.yaml  index.js  lambda.yaml  nested.yaml  vpc.yaml
