[package]
name = "cloudformatious-cli"
version = "0.6.0"
authors = ["Chris Connelly <chris@connec.co.uk>"]
license = "MIT"
edition = "2018"
description = "A CloudFormation CLI that won't make you cry"
repository = "https://github.com/connec/cloudformatious-cli"

[[bin]]
name = "cloudformatious"
path = "src/main.rs"

[dependencies]
async_zip = { version = "0.0.9", default-features = false, features = ["deflate"] }
atty = "0.2.14"
aws-config = "1.1.10"
aws-credential-types = "1.2.0"
aws-sdk-s3 = "1.22.0"
aws-types = "1.1.9"
aws_sso_flow = { version = "0.5.0", default-features = false, features = ["aws-sdk", "rustls"] }
base64 = "0.13.0"
chrono = { version = "0.4.22", default-features = false }
clap = { version = "4.0.18", features = ["derive", "env"] }
clap_complete = "4.0.3"
cloudformatious = "0.7.0"
colored = "2.0.0"
futures-util = "0.3.24"
hyper = { version = "0.14.20", features = ["stream"] }
md5 = "0.7.0"
serde_json = "1.0.85"
serde_yaml = "0.9.13"
tempfile = "3.3.0"
tokio = { version = "1.21.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
